--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -1,62 +1,54 @@
+
+/* Full-width input fields */
 input[type=text], input[type=password] {
     width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
+    padding: 12px 20px;
+    margin: 8px 0;
     display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
-
-/* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
 
 /* Set a style for all buttons */
-
-
 button {
-    background-color: #d89b64;
+    -background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
-    opacity: 0.9;
 }
 
 button:hover {
-    opacity:1;
+    opacity: 0.8;
 }
 
 /* Extra styles for the cancel button */
-.cancelbtn {
-    padding: 14px 20px;
+.cancelbtngin {
+    width: auto;
+    padding: 10px 18px;
     background-color: #f44336;
 }
 
-/* Extra styles for the signup button */
-.signupbtn {
-    -background-color: green;
-}
+/* Center the image and position the close button */
 
 
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
-}
-
-/* Add padding to container elements */
 .container {
     padding: 16px;
-    cursor: default;
+}
+
+.container-bottom {
+    background-color:#f1f1f1
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
 }
 
 /* The Modal (background) */
-.modalSignUp {
+.loginFormModal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -65,50 +57,37 @@ button:hover {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: #474e5d;
-    padding-top: 50px;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
 }
 
 /* Modal Content/Box */
-.modalSignupContent {
+.LoginModalContent {
     background-color: #fefefe;
     margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
-/* Style the horizontal ruler */
-hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-}
- 
 /* The Close Button (x) */
 .close {
     position: absolute;
-    right: 35px;
-    top: 15px;
-    font-size: 40px;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
     font-weight: bold;
-    color: #f1f1f1;
 }
 
 .close:hover,
 .close:focus {
-    color: #f44336;
+    color: red;
     cursor: pointer;
 }
-
-/* Clear floats */
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
 }
 
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-       width: 100%;
-    }
-}
