--- a/src/components/SignupForm/index.css
+++ b/src/components/SignupForm/index.css
@@ -1,4 +1,4 @@
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
