--- a/src/components/SignupForm/index.css
+++ b/src/components/SignupForm/index.css
@@ -57,7 +57,7 @@ button:hover {
 
 /* The Modal (background) */
 .modalSignUp {
-    display: none; /* Hidden by default */
+    display: block;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
