--- a/src/components/Contacts/index.css
+++ b/src/components/Contacts/index.css
@@ -1,11 +1,11 @@
-.contactsItems{
+.contactsItem{
   width: 80%;
   margin: 0 auto;
 
 }
-.contactsItems__title {
+.contactsItem__title {
   font-size: 28px;
 }
-.contactsItems__content {
+.contactsItem__content {
   font-size: 16px;
 }
