--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -2,7 +2,9 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; }
+  flex-wrap: wrap; 
+  margin-bottom: 30px;
+}
 
   @media only screen and (min-width: 781px) and (max-width: 1149px) {
     .menu {
