--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0; }
+
+
+  #root {
+    display: flex;
+    height: 100%;
+  flex-direction: column;
+  background: #ffffff; }
+  
