Add NotFound component

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -28,11 +28,14 @@
 }
 .social {
   display: flex;
-  justify-content: center; }
+  justify-content: center; 
+  
+}
 
   .social__link {
     padding: 20px;
     color: #d89b64;
     border-radius: 50%;
     font-size: 30px;
-    margin-right: 8px; }
+    margin-right: 8px; 
+  }
